adding javascript skeleton

--- a/schoolhub/lib/schoolhub_web/templates/session/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/session/new.html.eex
@@ -14,8 +14,12 @@
   </div>
 <% end %>
 
+<button onclick="login()">Login JS</button>  
+
 <%= form_for @conn, Routes.session_path(@conn, :delete), [method: :delete, as: :user], fn _ -> %>
   <div class="form-group">
     <%= submit "logout" %>
   </div>
 <% end %>
+
+<script src='<%= Routes.static_path(@conn, "/js/auth.js") %>'></script>
