--- a/schoolhub/lib/schoolhub_web/templates/session/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/session/new.html.eex
@@ -14,6 +14,8 @@
   </div>
 <% end %>
 
+<input type="text" id="username" name="username" placeholder="Username">
+<input type="password" id="password" name="password" placeholder="Password">
 <button onclick="login()">Login JS</button>  
 
 <%= form_for @conn, Routes.session_path(@conn, :delete), [method: :delete, as: :credential], fn _ -> %>
