--- a/schoolhub/lib/schoolhub_web/templates/session/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/session/new.html.eex
@@ -15,4 +15,6 @@
   </div>
 <% end %>
 
+<span><%= link "New User", to: Routes.user_path(@conn, :new) %></span>
+
 <script src='<%= Routes.static_path(@conn, "/js/auth.js") %>'></script>
