adjusting html for better display of privileges

--- a/schoolhub/lib/schoolhub_web/templates/privilege/edit.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/privilege/edit.html.eex
@@ -1,5 +1,8 @@
 <h1>Edit Privilege</h1>
 
+<strong>Username:</strong>
+<%= Schoolhub.Accounts.get_user!(@privilege.user_id).credential.username %>
+
 <%= render "form.html", Map.put(assigns, :action, Routes.privilege_path(@conn, :update, @privilege)) %>
 
 <span><%= link "Back", to: Routes.privilege_path(@conn, :index) %></span>
