--- a/schoolhub/lib/schoolhub_web/templates/privilege/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/privilege/index.html.eex
@@ -3,19 +3,23 @@
 <table>
   <thead>
     <tr>
-      <th>Level</th>
+      <th>Name</th>
+      <th>Username</th>
+      <th>Privilege level</th>
 
       <th></th>
     </tr>
   </thead>
   <tbody>
-<%= for privilege <- @privileges do %>
+<%= for user <- Schoolhub.Accounts.list_users() do %>
     <tr>
-      <td><%= privilege.level %></td>
+      <td><%= user.name %></td>
+      <td><%= user.credential.username %></td>
+      <td><%= user.privilege.level %></td>
 
       <td>
-        <span><%= link "Show", to: Routes.privilege_path(@conn, :show, privilege) %></span>
-        <span><%= link "Edit", to: Routes.privilege_path(@conn, :edit, privilege) %></span>
+        <span><%= link "Show", to: Routes.privilege_path(@conn, :show, user.privilege) %></span>
+        <span><%= link "Edit", to: Routes.privilege_path(@conn, :edit, user.privilege) %></span>
       </td>
     </tr>
 <% end %>
