--- a/schoolhub/lib/schoolhub_web/templates/affiliation/edit_form.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/affiliation/edit_form.html.eex
@@ -5,12 +5,11 @@
     </div>
   <% end %>
 
-  <%= hidden_input f, :affiliation, value: "student" %>
+  <%= label f, :affiliation %>
+  <%= select f, :affiliation, ["student", "assistant", "owner"] %>
+  <%= error_tag f, :affiliation %>
 
-  <%= label f, :user_id %>
-  <%= number_input f, :user_id %>
-  <%= error_tag f, :user_id %>
-
+  <%= hidden_input f, :user_id %>
   <%= hidden_input f, :course_id, value: @course_id %>
 
   <div>
