--- a/schoolhub/lib/schoolhub_web/templates/affiliation/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/affiliation/index.html.eex
@@ -3,6 +3,8 @@
 <table>
   <thead>
     <tr>
+      <th>Name</th>
+      <th>Username</th>
       <th>Affiliation</th>
 
       <th></th>
@@ -11,16 +13,18 @@
   <tbody>
 <%= for affiliation <- @course_affiliations do %>
     <tr>
+      <td><%= Schoolhub.Accounts.get_user!(affiliation.user_id).name %></td>
+      <td><%= Schoolhub.Accounts.get_user!(affiliation.user_id).credential.username %></td>
       <td><%= affiliation.affiliation %></td>
 
       <td>
         <span><%= link "Show", to: Routes.course_affiliation_path(@conn, :show, @course_id, affiliation) %></span>
         <span><%= link "Edit", to: Routes.course_affiliation_path(@conn, :edit, @course_id, affiliation) %></span>
-        <span><%= link "Delete", to: Routes.course_affiliation_path(@conn, :delete, @course_id, affiliation), method: :delete, data: [confirm: "Are you sure?"] %></span>
+        <span><%= link "Remove", to: Routes.course_affiliation_path(@conn, :delete, @course_id, affiliation), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
     </tr>
 <% end %>
   </tbody>
 </table>
 
-<span><%= link "New Affiliation", to: Routes.course_affiliation_path(@conn, :new, @course_id) %></span>
+<span><%= link "Add Member", to: Routes.course_affiliation_path(@conn, :new, @course_id) %></span>
