--- a/schoolhub/lib/schoolhub_web/templates/affiliation/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/affiliation/new.html.eex
@@ -1,4 +1,4 @@
-<h1>New Affiliation</h1>
+<h1>Add Member</h1>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.course_affiliation_path(@conn, :create, @course_id)) %>
 
