dividing course responsibilites based of affiliation - no tests yet

--- a/schoolhub/lib/schoolhub_web/templates/affiliation/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/affiliation/index.html.eex
@@ -28,3 +28,4 @@
 </table>
 
 <span><%= link "Add Member", to: Routes.course_affiliation_path(@conn, :new, @course_id) %></span>
+<span><%= link "Back", to: Routes.course_path(@conn, :show, @course_id) %></span>
