need admin privilege for changing privileges

--- a/schoolhub/lib/schoolhub_web/templates/user/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/user/show.html.eex
@@ -17,6 +17,11 @@
     <%= @user.credential.username %>
   </li>
 
+  <li>
+    <strong>Privilege:</strong>
+    <%= @user.privilege.level %>
+  </li>
+
 </ul>
 
 <span><%= link "Edit", to: Routes.user_path(@conn, :edit, @user) %></span>
