--- a/schoolhub/lib/schoolhub_web/templates/post/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/post/show.html.eex
@@ -8,6 +8,11 @@
   </li>
 
   <li>
+    <strong>Author:</strong>
+    <%= Schoolhub.Accounts.get_user!(@post.creator).name %>
+  </li>
+
+  <li>
     <strong>Pinned:</strong>
     <%= @post.pinned %>
   </li>
