--- a/schoolhub/lib/schoolhub_web/templates/reply/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/reply/index.html.eex
@@ -14,13 +14,13 @@
       <td><%= reply.content %></td>
 
       <td>
-        <span><%= link "Show", to: Routes.reply_path(@conn, :show, reply) %></span>
-        <span><%= link "Edit", to: Routes.reply_path(@conn, :edit, reply) %></span>
-        <span><%= link "Delete", to: Routes.reply_path(@conn, :delete, reply), method: :delete, data: [confirm: "Are you sure?"] %></span>
+        <span><%= link "Show", to: Routes.course_post_reply_path(@conn, :show, @course_id, @post_id, reply) %></span>
+        <span><%= link "Edit", to: Routes.course_post_reply_path(@conn, :edit, @course_id, @post_id, reply) %></span>
+        <span><%= link "Delete", to: Routes.course_post_reply_path(@conn, :delete, @course_id, @post_id, reply), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
     </tr>
 <% end %>
   </tbody>
 </table>
 
-<span><%= link "New Reply", to: Routes.reply_path(@conn, :new) %></span>
+<span><%= link "New Reply", to: Routes.course_post_reply_path(@conn, :new, @course_id, @post_id) %></span>
