--- a/schoolhub/lib/schoolhub_web/templates/reply/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/reply/new.html.eex
@@ -1,5 +1,5 @@
 <h1>New Reply</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.reply_path(@conn, :create)) %>
+<%= render "form.html", Map.put(assigns, :action, Routes.course_post_reply_path(@conn, :create, @course_id, @post_id)) %>
 
-<span><%= link "Back", to: Routes.reply_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.course_post_reply_path(@conn, :index, @course_id, @post_id) %></span>
