--- a/schoolhub/lib/schoolhub_web/templates/reply/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/reply/show.html.eex
@@ -9,5 +9,5 @@
 
 </ul>
 
-<span><%= link "Edit", to: Routes.reply_path(@conn, :edit, @reply) %></span>
-<span><%= link "Back", to: Routes.reply_path(@conn, :index) %></span>
+<span><%= link "Edit", to: Routes.course_post_reply_path(@conn, :edit, @course_id, @post_id, @reply) %></span>
+<span><%= link "Back", to: Routes.course_post_reply_path(@conn, :index, @course_id, @post_id) %></span>
