--- a/schoolhub/lib/schoolhub_web/templates/grade/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/grade/show.html.eex
@@ -4,10 +4,12 @@
 
   <li>
     <strong>Grades:</strong>
-    <%= @grade.grades %>
+    <textarea disabled=true><%= @grade.grades %></textarea>
   </li>
 
 </ul>
 
-<span><%= link "Edit", to: Routes.grade_path(@conn, :edit, @grade) %></span>
-<span><%= link "Back", to: Routes.grade_path(@conn, :index) %></span>
+<span><%= link "Edit", to: Routes.course_affiliation_grade_path(@conn, :edit,
+	  @course_id, @affiliation_id, @grade) %></span>
+<span><%= link "Back", to: Routes.course_affiliation_path(@conn, :show,
+	  @course_id, @affiliation_id) %></span>
