--- a/schoolhub/lib/schoolhub_web/templates/grade/edit_form.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/grade/edit_form.html.eex
@@ -1,15 +1,13 @@
-<%= form_for @changeset, @action, fn _f -> %>
+<%= form_for @changeset, @action, fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
 
-  <strong>Title</strong>
-  <input type="text" id="title" name="title">
-
-  <strong>Grade</strong>
-  <input type="text" id="grade" name="grade">
+  <%= label f, :grades %>
+  <%= textarea f, :grades %>
+  <%= error_tag f, :grades %>
 
   <div>
     <%= submit "Save" %>
