--- a/schoolhub/lib/schoolhub_web/templates/grade/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/grade/show.html.eex
@@ -9,6 +9,8 @@
 
 </ul>
 
+<span><%= link "New", to: Routes.course_affiliation_grade_path(@conn, :new,
+	  @course_id, @affiliation_id) %></span>
 <span><%= link "Edit", to: Routes.course_affiliation_grade_path(@conn, :edit,
 	  @course_id, @affiliation_id, @grade) %></span>
 <span><%= link "Back", to: Routes.course_affiliation_path(@conn, :show,
