html pages for chat

--- a/schoolhub/lib/schoolhub_web/templates/post/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/post/index.html.eex
@@ -39,3 +39,4 @@
 <span><%= link "More", to: Routes.course_post_path(@conn, :index, @course_id,
 	  [limit: String.to_integer(@post_limit) + 5]) %></span>
 <% end %>
+<span><%= link "Back", to: Routes.course_path(@conn, :show, @course_id) %></span>
