--- a/schoolhub/lib/schoolhub_web/templates/course/edit.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/course/edit.html.eex
@@ -2,4 +2,4 @@
 
 <%= render "form.html", Map.put(assigns, :action, Routes.course_path(@conn, :update, @course)) %>
 
-<span><%= link "Back", to: Routes.course_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.course_path(@conn, :show, @course.id) %></span>
