--- a/schoolhub/lib/schoolhub_web/templates/chat/chat.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/chat/chat.html.eex
@@ -4,6 +4,8 @@
 <input type="hidden" id="username" name="username" value="<%= @user.credential.username %>">
 <textarea id="chatbox" name="chatbox" readonly></textarea>
 <textarea id="sendbox" name="sendbox" placeholder="Type here to send a message"></textarea>
-<button type="button">Send</button>
+<button type="button" id="send_button" name="send_button" onclick="send_msg()">Send</button>
 
 <span><%= link "Back", to: Routes.course_chat_path(@conn, :index, @course_id) %></span>
+  
+<script type="text/javascript" src='<%= Routes.static_path(@conn, "/js/chat.js") %>'></script>
