--- a/schoolhub/lib/schoolhub_web/templates/chat/chat.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/chat/chat.html.eex
@@ -5,6 +5,7 @@
 <input type="hidden" id="username" name="username" value="<%= @user.credential.username %>">
 <input type="hidden" id="address" name="address" value="10.3.2.1">
 <input type="hidden" id="host" name="host" value="10.3.2.1">
+<input type="hidden" id="self" name="self" value="<%= @self.credential.username %>">
 
 <textarea id="chatbox" name="chatbox" readonly></textarea>
 <textarea id="sendbox" name="sendbox" placeholder="Type here to send a message"></textarea>
