--- a/schoolhub/lib/schoolhub_web/templates/chat/chat.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/chat/chat.html.eex
@@ -3,8 +3,8 @@
 <strong><%= @user.name %></strong>
 
 <input type="hidden" id="username" name="username" value="<%= @user.credential.username %>">
-<input type="hidden" id="address" name="address" value="10.3.2.1">
 <input type="hidden" id="host" name="host" value="10.3.2.1">
+<input type="hidden" id="domain" name="domain" value="10.3.2.1">
 <input type="hidden" id="self" name="self" value="<%= @self.credential.username %>">
 
 <textarea id="chatbox" name="chatbox" readonly></textarea>
