--- a/schoolhub/lib/schoolhub_web/templates/file/edit.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/file/edit.html.eex
@@ -1,5 +1,5 @@
 <h1>Edit File</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.file_path(@conn, :update, @file)) %>
+<%= render "form.html", Map.put(assigns, :action, Routes.course_file_path(@conn, :update, @course_id, @file)) %>
 
-<span><%= link "Back", to: Routes.file_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.course_file_path(@conn, :index, @course_id) %></span>
