--- a/schoolhub/lib/schoolhub_web/templates/file/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/file/index.html.eex
@@ -18,13 +18,13 @@
       <td><%= file.size %></td>
 
       <td>
-        <span><%= link "Show", to: Routes.file_path(@conn, :show, file) %></span>
-        <span><%= link "Edit", to: Routes.file_path(@conn, :edit, file) %></span>
-        <span><%= link "Delete", to: Routes.file_path(@conn, :delete, file), method: :delete, data: [confirm: "Are you sure?"] %></span>
+        <span><%= link "Show", to: Routes.course_file_path(@conn, :show, @course_id, file) %></span>
+        <span><%= link "Edit", to: Routes.course_file_path(@conn, :edit, @course_id, file) %></span>
+        <span><%= link "Delete", to: Routes.course_file_path(@conn, :delete, @course_id, file), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
     </tr>
 <% end %>
   </tbody>
 </table>
 
-<span><%= link "New File", to: Routes.file_path(@conn, :new) %></span>
+<span><%= link "New File", to: Routes.course_file_path(@conn, :new, @course_id) %></span>
