--- a/schoolhub/lib/schoolhub_web/templates/file/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/file/new.html.eex
@@ -1,5 +1,5 @@
 <h1>New File</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.file_path(@conn, :create)) %>
+<%= render "form.html", Map.put(assigns, :action, Routes.course_file_path(@conn, :create, @course_id)) %>
 
-<span><%= link "Back", to: Routes.file_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.course_file_path(@conn, :index, @course_id) %></span>
