--- a/schoolhub/lib/schoolhub_web/templates/course/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/course/show.html.eex
@@ -17,5 +17,6 @@
 <span><%= link "View Members", to: Routes.course_affiliation_path(@conn, :index, @course.id) %></span>
 <span><%= link "View Posts", to: Routes.course_post_path(@conn, :index, @course.id) %></span>
 <span><%= link "Chat", to: Routes.course_chat_path(@conn, :index, @course.id) %></span>
+<span><%= link "Files", to: Routes.course_file_path(@conn, :index, @course.id) %></span>
 <span><%= link "Edit", to: Routes.course_path(@conn, :edit, @course) %></span>
 <span><%= link "Back", to: Routes.course_path(@conn, :index) %></span>
