--- a/schoolhub/lib/schoolhub_web/templates/file/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/file/index.html.eex
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th>Filename</th>
-      <th>Data</th>
+      <th>Uploader</th>
       <th>Size</th>
 
       <th></th>
@@ -14,12 +14,11 @@
 <%= for file <- @files do %>
     <tr>
       <td><%= file.filename %></td>
-      <td><%= file.data %></td>
+      <td><%= Schoolhub.Accounts.get_user!(file.uploader).name %></td>
       <td><%= file.size %></td>
 
       <td>
         <span><%= link "Show", to: Routes.course_file_path(@conn, :show, @course_id, file) %></span>
-        <span><%= link "Edit", to: Routes.course_file_path(@conn, :edit, @course_id, file) %></span>
         <span><%= link "Delete", to: Routes.course_file_path(@conn, :delete, @course_id, file), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
     </tr>
