--- a/schoolhub/lib/schoolhub_web/templates/file/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/file/show.html.eex
@@ -14,7 +14,7 @@
 
   <li>
     <strong>Size:</strong>
-    <%= @file.size %>
+    <%= Schoolhub.Files.display_size(@file.size) %>
   </li>
 
 </ul>
