--- a/schoolhub/lib/schoolhub_web/templates/layout/app.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/layout/app.html.eex
@@ -14,14 +14,14 @@
       <section class="container">
         <nav role="navigation">
           <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
+            <li><a href="<%= Routes.session_path(@conn, :new) %>">Session</a></li>
             <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
               <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
             <% end %>
           </ul>
         </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
+        <a href="<%= Routes.page_path(@conn, :index) %>" class="phx-logo">
+          <img src="<%= Routes.static_path(@conn, "/images/schoolhub.png") %>" alt="Schoolhub Logo"/>
         </a>
       </section>
     </header>
