--- a/schoolhub/lib/schoolhub_web/templates/chat/chat.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/chat/chat.html.eex
@@ -9,7 +9,7 @@
 
 <textarea id="chatbox" name="chatbox" readonly></textarea>
 <textarea id="sendbox" name="sendbox" placeholder="Type here to send a message"></textarea>
-<button type="button" id="send_button" name="send_button" onclick="send_msg()">Send</button>
+<button type="button" id="send_button" name="send_button"">Send</button>
 
 <span><%= link "Back", to: Routes.course_chat_path(@conn, :index, @course_id) %></span>
   
