course description now renders from markdown

--- a/schoolhub/lib/schoolhub_web/templates/course/form.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/course/form.html.eex
@@ -10,6 +10,7 @@
   <%= error_tag f, :name %>
 
   <%= label f, :description %>
+  (Write text in markdown to render)
   <%= textarea f, :description %>
   <%= error_tag f, :description %>
 
