showing course posts is parsed as markdown

--- a/schoolhub/lib/schoolhub_web/templates/course/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/course/show.html.eex
@@ -9,7 +9,7 @@
 
   <li>
     <strong>Description:<br></strong>
-    <%= Earmark.as_html!(@course.description) |> raw() %>
+    <%= @course.description |> Earmark.as_html!() |> raw() %>
   </li>
 
 </ul>
