--- a/schoolhub/lib/schoolhub_web/templates/reply/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/reply/show.html.eex
@@ -3,8 +3,8 @@
 <ul>
 
   <li>
-    <strong>Content:</strong>
-    <%= @reply.content %>
+    <strong>Content:<br></strong>
+    <%= @reply.content |> Earmark.as_html!() |> raw() %>
   </li>
 
 </ul>
