update links in html views

--- a/schoolhub/lib/schoolhub_web/templates/chat/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/chat/index.html.eex
@@ -1,4 +1,7 @@
-<h1>Listing Users</h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h2>Listing Users</h2>
+
+<span><%= link "Back", to: Routes.course_path(@conn, :show, @course_id) %></span>
 
 <table>
   <thead>
@@ -20,5 +23,3 @@
 <% end %>
   </tbody>
 </table>
-
-<span><%= link "Back", to: Routes.course_path(@conn, :show, @course_id) %></span>
