--- a/schoolhub/lib/schoolhub_web/templates/affiliation/edit.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/affiliation/edit.html.eex
@@ -1,4 +1,5 @@
-<h1>Change Affiliation</h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h2>Change Affiliation</h2>
 
 <strong>Username:</strong>
 <%= Schoolhub.Accounts.get_user!(@affiliation.user_id).credential.username %>
