--- a/schoolhub/lib/schoolhub_web/templates/file/edit.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/file/edit.html.eex
@@ -1,4 +1,5 @@
-<h1>Edit File</h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h2>Edit File</h2>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.course_file_path(@conn, :update, @course_id, @file)) %>
 
