--- a/schoolhub/lib/schoolhub_web/templates/grade/edit.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/grade/edit.html.eex
@@ -1,4 +1,5 @@
-<h1>Edit Grade</h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h2>Edit Grade</h2>
 
 <%= render "edit_form.html", Map.put(assigns, :action, Routes.course_affiliation_grade_path(@conn, :update, @course_id, @affiliation_id, @grade)) %>
 
