--- a/schoolhub/lib/schoolhub_web/templates/grade/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/grade/index.html.eex
@@ -1,4 +1,5 @@
-<h1>Listing Grades</h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h2>Listing Grades</h2>
 
 <table>
   <thead>
