--- a/schoolhub/lib/schoolhub_web/templates/post/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/post/new.html.eex
@@ -1,4 +1,5 @@
-<h1>New Post</h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h2>New Post</h2>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.course_post_path(@conn, :create, @course_id)) %>
 
