--- a/schoolhub/lib/schoolhub_web/templates/privilege/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/privilege/index.html.eex
@@ -1,5 +1,7 @@
 <h1>Listing Privileges</h1>
 
+<span><%= link "Back", to: Routes.page_path(@conn, :index) %></span>
+
 <table>
   <thead>
     <tr>
@@ -25,4 +27,3 @@
 <% end %>
   </tbody>
 </table>
-
