--- a/schoolhub/lib/schoolhub_web/templates/reply/edit.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/reply/edit.html.eex
@@ -1,4 +1,5 @@
-<h1>Edit Reply</h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h2>Edit Reply</h2>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.course_post_reply_path(@conn, :update, @course_id, @post_id, @reply)) %>
 
