--- a/schoolhub/lib/schoolhub_web/templates/chat/chat.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/chat/chat.html.eex
@@ -4,7 +4,8 @@
 <strong><%= @user.name %></strong>
 
 <input type="hidden" id="username" name="username" value="<%= @user.credential.username %>">
-<input type="hidden" id="host" name="host" value="<%= System.get_env("DOMAIN", "schoolhub.com") %>">
+<input type="hidden" id="xmpp_url" name="xmpp_url"
+       value="<%= Application.get_env(:schoolhub, :xmpp)[:protocol] <> "://" <>  System.get_env("DOMAIN", "localhost") <> ":" <> Application.get_env(:schoolhub, :xmpp)[:port] <> "/ws-xmpp" %>">
 <input type="hidden" id="domain" name="domain" value="10.3.2.1">
 <input type="hidden" id="self" name="self" value="<%= @self.credential.username %>">
 <input type="hidden" id="token" name="token" value="<%= @token %>">
