update html pages to display extended usernames

--- a/schoolhub/lib/schoolhub_web/templates/affiliation/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/affiliation/show.html.eex
@@ -4,6 +4,11 @@
 <ul>
 
   <li>
+    <strong>Name:</strong>
+    <%= Schoolhub.Accounts.get_user!(@affiliation.user_id).name %>
+  </li>
+  
+  <li>
     <strong>Username:</strong>
     <%= Schoolhub.Accounts.get_user!(@affiliation.user_id).credential.username %>
   </li>
