--- a/schoolhub/lib/schoolhub_web/templates/reply/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/reply/index.html.eex
@@ -11,7 +11,7 @@
 <%= for reply <- @post_replies do %>
     <tr>
       <td><%= reply.content |> SchoolhubWeb.Gettext.first_line() %></td>
-      <td><%= Schoolhub.Accounts.get_user!(reply.creator).name %></td>
+      <td><%= Schoolhub.Courses.get_username!(reply.creator, @course_id) %></td>
 
       <td>
         <span><%= link "Show", to: Routes.course_post_reply_path(@conn, :show, @course_id, @post_id, reply) %></span>
