--- a/schoolhub/lib/schoolhub_web/templates/post/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/post/index.html.eex
@@ -23,7 +23,7 @@
 <%= for post <- @posts do %>
     <tr>
       <td><%= post.content |> SchoolhubWeb.Gettext.first_line() %></td>
-      <td><%= Schoolhub.Accounts.get_user!(post.creator).name %></td>
+      <td><%= Schoolhub.Courses.get_username!(post.creator, @course_id) %></td>
       <td><%= Enum.count(post.reply) %></td>
       <td><%= if post.pinned, do: "pinned" %></td>
 
